--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="logo header__logo">
               <img src="img/hero/logo.png" alt="Логотип">
             </a>
-            <nav>
+            <nav class="header__navigation">
               <ul class="header__menu ">
                 <li>
                   <a href="#" class="header__link">О нас</a>
@@ -40,7 +40,12 @@
                 </li>
               </ul>
             </nav>
-            <a href="tel:+78009039090" class="header__contact">8 800 903 90 90</a>
+            <a href="tel:+78009039090" class="contact header__contact">8 800 903 90 90</a>
+            <a href="#" class="hamburger">
+              <span class="hamburger__line"></span>
+              <span class="hamburger__line"></span>
+              <span class="hamburger__line"></span>
+            </a>
           </div>
         </header>
         <div class="hero__container container">
